[gd_scene load_steps=3 format=3 uid="uid://byfd1msfx04i2"]

[ext_resource type="Script" uid="uid://c27f457uu3tiw" path="res://scenes/simulation/npc_2d.gd" id="1_t60e0"]
[ext_resource type="Texture2D" uid="uid://cl1hev1iq81qs" path="res://npc.png" id="2_4k7ld"]

[node name="Npc2d" type="Node2D"]
script = ExtResource("1_t60e0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4k7ld")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = -16.0
show_percentage = false

[node name="NameLabel" type="Label" parent="."]
clip_contents = true
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = -7.0
horizontal_alignment = 1

[node name="SelectionIndicator" type="Node2D" parent="."]

[node name="GroupIndicator" type="Node2D" parent="."]
